# PulmonaryEmbolismSegmentation

./: .gitignore  LICENSE  README.md  config.json  local_architecture.py  modeling_pe_segmentation.py  pred_template.sh  pyproject.toml
dataset/nnUNet_results/Dataset256_PE/nnUNetTrainer_500epochs__nnUNetResEncUNetPlans_80G__3d_fullres/: dataset.json  dataset_fingerprint.json  plans.json
pulmonary_embolism_segmentation/: __init__.py  configuration_pe_segmentation.py  inference.py  modeling_pe_segmentation.py
scripts/: batch_evaluate_dataset.py  convert_nnunet_checkpoint.py  evaluate_segmentation.py  probe_gpu_tiles.py  run_inference.py  test_input_transposes.py
